[gd_scene load_steps=2 format=3 uid="uid://ddbxamso0dywb"]

[ext_resource type="Script" path="res://addons/datalogue/ui/forms/remove_form.gd" id="1_vb823"]

[node name="RemoveForm" type="Control"]
minimum_size = Vector2(200, 100)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -724.0
offset_bottom = -489.0
script = ExtResource( "1_vb823" )

[node name="MainLayout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ErrorLbl" type="Label" parent="MainLayout"]
modulate = Color(0.84, 0.21, 0.21, 1)
offset_right = 300.0
offset_bottom = 26.0
text = "This action cannot be reverted"

[node name="ValidateSw" type="CheckButton" parent="MainLayout"]
offset_top = 30.0
offset_right = 300.0
offset_bottom = 61.0
text = "Validate delete"

[node name="ButtonLayout" type="HBoxContainer" parent="MainLayout"]
offset_top = 65.0
offset_right = 300.0
offset_bottom = 96.0

[node name="CancelBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_right = 60.0
offset_bottom = 31.0
text = "Cancel"

[node name="Spacer" type="Control" parent="MainLayout/ButtonLayout"]
offset_left = 64.0
offset_right = 237.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="DeleteBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_left = 241.0
offset_right = 300.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 16
disabled = true
text = "Delete"

[connection signal="toggled" from="MainLayout/ValidateSw" to="." method="_on_ValidateSw_toggled"]
[connection signal="pressed" from="MainLayout/ButtonLayout/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="MainLayout/ButtonLayout/DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
